# tarif-teliway

./: Cargo.toml  build.sh
src/: form.rs  main.rs  tarif.rs
src/html/: inputs.rs
src/tarif/: form.rs  search.rs
