[package]
name = "tarif_teliway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
dotenv = "0.15.0"
maud = { version = "*", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
